[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tools.setuptools.packages.find]
where = ["src"]
include = ["et_api"]
namespaces = true

[project]
name = "et-api"
dynamic = ["version"]
readme = "README.md"
description = "Proofpoint Emerging Threats Python API Package"
license = { text = "MIT" }
requires-python = ">3.9"
dependencies = [
    'requests',
    'pysocks'
]

[project.urls]
repository = "https://github.com/pfptcommunity/et-api-python"
homepage = "https://apidocs.emergingthreats.net"
#documentation = "https://github.com/pfptcommunity/et-api-python"
#changelog = "https://github.com/pfptcommunity/et-api-python"
