[metadata]
name = et-api
version = 0.1.0
license = MIT
author = Proofpoint
maintainer = Ludvik Jerabek
url = https://github.com/pfptcommunity/et-api-python
description= Proofpoint Emerging Threats Python API Package

[options]
zip_safe = False
include_package_data = False
packages =
    et_api
    et_api.rest
    et_api.resources
python_requires = >= 3.9
install_requires =
    requests